prac3y.output
Terminals unused in grammar

   CALC
   ON
   OFF
   DO
   DONE


Estado 32 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: all $end

    1 all: all function
    2    | function

    3 function: ID params OPEN_CLAUD programa CLOSE_CLAUD

    4 params: OPEN_PARENTH CLOSE_PARENTH

    5 separator: SEPARATOR

    6 programa: ordre separator programa
    7         | ordre separator
    8         | ordre

    9 ordre: assign
   10      | boolean_expr
   11      | conditional
   12      | loop
   13      | function_call

   14 function_call: ID OPEN_PARENTH CLOSE_PARENTH
   15              | ID OPEN_PARENTH input_params CLOSE_PARENTH

   16 input_params: input_params ID
   17             | ID

   18 if_expr: IF OPEN_PARENTH boolean_expr CLOSE_PARENTH THEN

   19 else: ELSE

   20 start_else: /* vacío */

   21 conditional: if_expr programa FI
   22            | if_expr OPEN_CLAUD programa CLOSE_CLAUD else start_else OPEN_CLAUD programa CLOSE_CLAUD

   23 while: WHILE

   24 while_expr: while OPEN_PARENTH boolean_expr CLOSE_PARENTH

   25 for_expr: FOR OPEN_PARENTH name IN arithm_expr FOR_RANGE arithm_expr CLOSE_PARENTH

   26 done: CLOSE_CLAUD

   27 do: OPEN_CLAUD

   28 loop: while_expr do programa done
   29     | for_expr do programa done

   30 assign: name ASSIGN boolean_expr
   31       | name error_assign boolean_expr

   32 error_assign: long_error ASSIGN
   33             | ASSIGN long_error
   34             | long_error ASSIGN long_error

   35 name: ID

   36 expression: LITERAL_STRING
   37           | LITERAL_INT
   38           | LITERAL_FLOAT

   39 boolean_expr: or_expr

   40 or: OR

   41 or_expr: or_expr or and_expr
   42        | and_expr

   43 and: AND

   44 and_expr: and_expr and not_expr
   45         | not_expr

   46 not_expr: NOT not_expr
   47         | arithm_expr
   48         | boolean

   49 arithm_expr: addition_expr

   50 addition_expr: addition_expr ADD multiplication_expr
   51              | addition_expr SUB multiplication_expr
   52              | ADD multiplication_expr
   53              | SUB multiplication_expr
   54              | multiplication_expr

   55 multiplication_expr: error_expression
   56                    | multiplication_expr MUL generic_expression
   57                    | multiplication_expr DIV generic_expression

   58 error_expression: generic_expression
   59                 | error_expression long_error generic_expression

   60 boolean: arithm_expr GT arithm_expr
   61        | arithm_expr GE arithm_expr
   62        | arithm_expr LT arithm_expr
   63        | arithm_expr LE arithm_expr
   64        | arithm_expr EQ arithm_expr
   65        | arithm_expr NE arithm_expr
   66        | LITERAL_BOOL

   67 generic_expression: expression
   68                   | name
   69                   | OPEN_PARENTH boolean_expr CLOSE_PARENTH

   70 long_error: ERROR long_error
   71           | ERROR


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ID (258) 3 14 15 16 17 35
LITERAL_INT (259) 37
LITERAL_FLOAT (260) 38
LITERAL_STRING (261) 36
LITERAL_BOOL (262) 66
ASSIGN (263) 30 32 33 34
ADD (264) 50 52
SUB (265) 51 53
MUL (266) 56
DIV (267) 57
OPEN_PARENTH (268) 4 14 15 18 24 25 69
CLOSE_PARENTH (269) 4 14 15 18 24 25 69
OPEN_CLAUD (270) 3 22 27
CLOSE_CLAUD (271) 3 22 26
SEPARATOR (272) 5
GT (273) 60
GE (274) 61
LT (275) 62
LE (276) 63
EQ (277) 64
NE (278) 65
AND (279) 43
OR (280) 40
NOT (281) 46
CALC (282)
ON (283)
OFF (284)
FOR (285) 25
IN (286) 25
FOR_RANGE (287) 25
WHILE (288) 23
DO (289)
DONE (290)
IF (291) 18
THEN (292) 18
ELSE (293) 19
FI (294) 21
ERROR (295) 70 71


No terminales con las reglas donde aparecen

$accept (41)
    en la izquierda: 0
all (42)
    en la izquierda: 1 2, en la derecha: 0 1
function (43)
    en la izquierda: 3, en la derecha: 1 2
params (44)
    en la izquierda: 4, en la derecha: 3
separator (45)
    en la izquierda: 5, en la derecha: 6 7
programa (46)
    en la izquierda: 6 7 8, en la derecha: 3 6 21 22 28 29
ordre (47)
    en la izquierda: 9 10 11 12 13, en la derecha: 6 7 8
function_call (48)
    en la izquierda: 14 15, en la derecha: 13
input_params (49)
    en la izquierda: 16 17, en la derecha: 15 16
if_expr (50)
    en la izquierda: 18, en la derecha: 21 22
else (51)
    en la izquierda: 19, en la derecha: 22
start_else (52)
    en la izquierda: 20, en la derecha: 22
conditional (53)
    en la izquierda: 21 22, en la derecha: 11
while (54)
    en la izquierda: 23, en la derecha: 24
while_expr (55)
    en la izquierda: 24, en la derecha: 28
for_expr (56)
    en la izquierda: 25, en la derecha: 29
done (57)
    en la izquierda: 26, en la derecha: 28 29
do (58)
    en la izquierda: 27, en la derecha: 28 29
loop (59)
    en la izquierda: 28 29, en la derecha: 12
assign (60)
    en la izquierda: 30 31, en la derecha: 9
error_assign (61)
    en la izquierda: 32 33 34, en la derecha: 31
name (62)
    en la izquierda: 35, en la derecha: 25 30 31 68
expression (63)
    en la izquierda: 36 37 38, en la derecha: 67
boolean_expr (64)
    en la izquierda: 39, en la derecha: 10 18 24 30 31 69
or (65)
    en la izquierda: 40, en la derecha: 41
or_expr (66)
    en la izquierda: 41 42, en la derecha: 39 41
and (67)
    en la izquierda: 43, en la derecha: 44
and_expr (68)
    en la izquierda: 44 45, en la derecha: 41 42 44
not_expr (69)
    en la izquierda: 46 47 48, en la derecha: 44 45 46
arithm_expr (70)
    en la izquierda: 49, en la derecha: 25 47 60 61 62 63 64 65
addition_expr (71)
    en la izquierda: 50 51 52 53 54, en la derecha: 49 50 51
multiplication_expr (72)
    en la izquierda: 55 56 57, en la derecha: 50 51 52 53 54 56 57
error_expression (73)
    en la izquierda: 58 59, en la derecha: 55 59
boolean (74)
    en la izquierda: 60 61 62 63 64 65 66, en la derecha: 48
generic_expression (75)
    en la izquierda: 67 68 69, en la derecha: 56 57 58 59
long_error (76)
    en la izquierda: 70 71, en la derecha: 32 33 34 59 70


State 0

    0 $accept: . all $end

    ID  desplazar e ir al estado 1

    all       ir al estado 2
    function  ir al estado 3


State 1

    3 function: ID . params OPEN_CLAUD programa CLOSE_CLAUD

    OPEN_PARENTH  desplazar e ir al estado 4

    params  ir al estado 5


State 2

    0 $accept: all . $end
    1 all: all . function

    $end  desplazar e ir al estado 6
    ID    desplazar e ir al estado 1

    function  ir al estado 7


State 3

    2 all: function .

    $default  reduce usando la regla 2 (all)


State 4

    4 params: OPEN_PARENTH . CLOSE_PARENTH

    CLOSE_PARENTH  desplazar e ir al estado 8


State 5

    3 function: ID params . OPEN_CLAUD programa CLOSE_CLAUD

    OPEN_CLAUD  desplazar e ir al estado 9


State 6

    0 $accept: all $end .

    $default  aceptar


State 7

    1 all: all function .

    $default  reduce usando la regla 1 (all)


State 8

    4 params: OPEN_PARENTH CLOSE_PARENTH .

    $default  reduce usando la regla 4 (params)


State 9

    3 function: ID params OPEN_CLAUD . programa CLOSE_CLAUD

    ID              desplazar e ir al estado 10
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18
    FOR             desplazar e ir al estado 19
    WHILE           desplazar e ir al estado 20
    IF              desplazar e ir al estado 21

    programa             ir al estado 22
    ordre                ir al estado 23
    function_call        ir al estado 24
    if_expr              ir al estado 25
    conditional          ir al estado 26
    while                ir al estado 27
    while_expr           ir al estado 28
    for_expr             ir al estado 29
    loop                 ir al estado 30
    assign               ir al estado 31
    name                 ir al estado 32
    expression           ir al estado 33
    boolean_expr         ir al estado 34
    or_expr              ir al estado 35
    and_expr             ir al estado 36
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 10

   14 function_call: ID . OPEN_PARENTH CLOSE_PARENTH
   15              | ID . OPEN_PARENTH input_params CLOSE_PARENTH
   35 name: ID .

    OPEN_PARENTH  desplazar e ir al estado 44

    $default  reduce usando la regla 35 (name)


State 11

   37 expression: LITERAL_INT .

    $default  reduce usando la regla 37 (expression)


State 12

   38 expression: LITERAL_FLOAT .

    $default  reduce usando la regla 38 (expression)


State 13

   36 expression: LITERAL_STRING .

    $default  reduce usando la regla 36 (expression)


State 14

   66 boolean: LITERAL_BOOL .

    $default  reduce usando la regla 66 (boolean)


State 15

   52 addition_expr: ADD . multiplication_expr

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    OPEN_PARENTH    desplazar e ir al estado 17

    name                 ir al estado 46
    expression           ir al estado 33
    multiplication_expr  ir al estado 47
    error_expression     ir al estado 41
    generic_expression   ir al estado 43


State 16

   53 addition_expr: SUB . multiplication_expr

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    OPEN_PARENTH    desplazar e ir al estado 17

    name                 ir al estado 46
    expression           ir al estado 33
    multiplication_expr  ir al estado 48
    error_expression     ir al estado 41
    generic_expression   ir al estado 43


State 17

   69 generic_expression: OPEN_PARENTH . boolean_expr CLOSE_PARENTH

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18

    name                 ir al estado 46
    expression           ir al estado 33
    boolean_expr         ir al estado 49
    or_expr              ir al estado 35
    and_expr             ir al estado 36
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 18

   46 not_expr: NOT . not_expr

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18

    name                 ir al estado 46
    expression           ir al estado 33
    not_expr             ir al estado 50
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 19

   25 for_expr: FOR . OPEN_PARENTH name IN arithm_expr FOR_RANGE arithm_expr CLOSE_PARENTH

    OPEN_PARENTH  desplazar e ir al estado 51


State 20

   23 while: WHILE .

    $default  reduce usando la regla 23 (while)


State 21

   18 if_expr: IF . OPEN_PARENTH boolean_expr CLOSE_PARENTH THEN

    OPEN_PARENTH  desplazar e ir al estado 52


State 22

    3 function: ID params OPEN_CLAUD programa . CLOSE_CLAUD

    CLOSE_CLAUD  desplazar e ir al estado 53


State 23

    6 programa: ordre . separator programa
    7         | ordre . separator
    8         | ordre .

    SEPARATOR  desplazar e ir al estado 54

    $default  reduce usando la regla 8 (programa)

    separator  ir al estado 55


State 24

   13 ordre: function_call .

    $default  reduce usando la regla 13 (ordre)


State 25

   21 conditional: if_expr . programa FI
   22            | if_expr . OPEN_CLAUD programa CLOSE_CLAUD else start_else OPEN_CLAUD programa CLOSE_CLAUD

    ID              desplazar e ir al estado 10
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    OPEN_CLAUD      desplazar e ir al estado 56
    NOT             desplazar e ir al estado 18
    FOR             desplazar e ir al estado 19
    WHILE           desplazar e ir al estado 20
    IF              desplazar e ir al estado 21

    programa             ir al estado 57
    ordre                ir al estado 23
    function_call        ir al estado 24
    if_expr              ir al estado 25
    conditional          ir al estado 26
    while                ir al estado 27
    while_expr           ir al estado 28
    for_expr             ir al estado 29
    loop                 ir al estado 30
    assign               ir al estado 31
    name                 ir al estado 32
    expression           ir al estado 33
    boolean_expr         ir al estado 34
    or_expr              ir al estado 35
    and_expr             ir al estado 36
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 26

   11 ordre: conditional .

    $default  reduce usando la regla 11 (ordre)


State 27

   24 while_expr: while . OPEN_PARENTH boolean_expr CLOSE_PARENTH

    OPEN_PARENTH  desplazar e ir al estado 58


State 28

   28 loop: while_expr . do programa done

    OPEN_CLAUD  desplazar e ir al estado 59

    do  ir al estado 60


State 29

   29 loop: for_expr . do programa done

    OPEN_CLAUD  desplazar e ir al estado 59

    do  ir al estado 61


State 30

   12 ordre: loop .

    $default  reduce usando la regla 12 (ordre)


State 31

    9 ordre: assign .

    $default  reduce usando la regla 9 (ordre)


State 32

   30 assign: name . ASSIGN boolean_expr
   31       | name . error_assign boolean_expr
   68 generic_expression: name .

    ASSIGN  desplazar e ir al estado 62
    ERROR   desplazar e ir al estado 63

    ERROR     [reduce usando la regla 68 (generic_expression)]
    $default  reduce usando la regla 68 (generic_expression)

    error_assign  ir al estado 64
    long_error    ir al estado 65


State 33

   67 generic_expression: expression .

    $default  reduce usando la regla 67 (generic_expression)


State 34

   10 ordre: boolean_expr .

    $default  reduce usando la regla 10 (ordre)


State 35

   39 boolean_expr: or_expr .
   41 or_expr: or_expr . or and_expr

    OR  desplazar e ir al estado 66

    $default  reduce usando la regla 39 (boolean_expr)

    or  ir al estado 67


State 36

   42 or_expr: and_expr .
   44 and_expr: and_expr . and not_expr

    AND  desplazar e ir al estado 68

    $default  reduce usando la regla 42 (or_expr)

    and  ir al estado 69


State 37

   45 and_expr: not_expr .

    $default  reduce usando la regla 45 (and_expr)


State 38

   47 not_expr: arithm_expr .
   60 boolean: arithm_expr . GT arithm_expr
   61        | arithm_expr . GE arithm_expr
   62        | arithm_expr . LT arithm_expr
   63        | arithm_expr . LE arithm_expr
   64        | arithm_expr . EQ arithm_expr
   65        | arithm_expr . NE arithm_expr

    GT  desplazar e ir al estado 70
    GE  desplazar e ir al estado 71
    LT  desplazar e ir al estado 72
    LE  desplazar e ir al estado 73
    EQ  desplazar e ir al estado 74
    NE  desplazar e ir al estado 75

    $default  reduce usando la regla 47 (not_expr)


State 39

   49 arithm_expr: addition_expr .
   50 addition_expr: addition_expr . ADD multiplication_expr
   51              | addition_expr . SUB multiplication_expr

    ADD  desplazar e ir al estado 76
    SUB  desplazar e ir al estado 77

    $default  reduce usando la regla 49 (arithm_expr)


State 40

   54 addition_expr: multiplication_expr .
   56 multiplication_expr: multiplication_expr . MUL generic_expression
   57                    | multiplication_expr . DIV generic_expression

    MUL  desplazar e ir al estado 78
    DIV  desplazar e ir al estado 79

    $default  reduce usando la regla 54 (addition_expr)


State 41

   55 multiplication_expr: error_expression .
   59 error_expression: error_expression . long_error generic_expression

    ERROR  desplazar e ir al estado 63

    $default  reduce usando la regla 55 (multiplication_expr)

    long_error  ir al estado 80


State 42

   48 not_expr: boolean .

    $default  reduce usando la regla 48 (not_expr)


State 43

   58 error_expression: generic_expression .

    $default  reduce usando la regla 58 (error_expression)


State 44

   14 function_call: ID OPEN_PARENTH . CLOSE_PARENTH
   15              | ID OPEN_PARENTH . input_params CLOSE_PARENTH

    ID             desplazar e ir al estado 81
    CLOSE_PARENTH  desplazar e ir al estado 82

    input_params  ir al estado 83


State 45

   35 name: ID .

    $default  reduce usando la regla 35 (name)


State 46

   68 generic_expression: name .

    $default  reduce usando la regla 68 (generic_expression)


State 47

   52 addition_expr: ADD multiplication_expr .
   56 multiplication_expr: multiplication_expr . MUL generic_expression
   57                    | multiplication_expr . DIV generic_expression

    MUL  desplazar e ir al estado 78
    DIV  desplazar e ir al estado 79

    $default  reduce usando la regla 52 (addition_expr)


State 48

   53 addition_expr: SUB multiplication_expr .
   56 multiplication_expr: multiplication_expr . MUL generic_expression
   57                    | multiplication_expr . DIV generic_expression

    MUL  desplazar e ir al estado 78
    DIV  desplazar e ir al estado 79

    $default  reduce usando la regla 53 (addition_expr)


State 49

   69 generic_expression: OPEN_PARENTH boolean_expr . CLOSE_PARENTH

    CLOSE_PARENTH  desplazar e ir al estado 84


State 50

   46 not_expr: NOT not_expr .

    $default  reduce usando la regla 46 (not_expr)


State 51

   25 for_expr: FOR OPEN_PARENTH . name IN arithm_expr FOR_RANGE arithm_expr CLOSE_PARENTH

    ID  desplazar e ir al estado 45

    name  ir al estado 85


State 52

   18 if_expr: IF OPEN_PARENTH . boolean_expr CLOSE_PARENTH THEN

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18

    name                 ir al estado 46
    expression           ir al estado 33
    boolean_expr         ir al estado 86
    or_expr              ir al estado 35
    and_expr             ir al estado 36
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 53

    3 function: ID params OPEN_CLAUD programa CLOSE_CLAUD .

    $default  reduce usando la regla 3 (function)


State 54

    5 separator: SEPARATOR .

    $default  reduce usando la regla 5 (separator)


State 55

    6 programa: ordre separator . programa
    7         | ordre separator .

    ID              desplazar e ir al estado 10
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18
    FOR             desplazar e ir al estado 19
    WHILE           desplazar e ir al estado 20
    IF              desplazar e ir al estado 21

    $default  reduce usando la regla 7 (programa)

    programa             ir al estado 87
    ordre                ir al estado 23
    function_call        ir al estado 24
    if_expr              ir al estado 25
    conditional          ir al estado 26
    while                ir al estado 27
    while_expr           ir al estado 28
    for_expr             ir al estado 29
    loop                 ir al estado 30
    assign               ir al estado 31
    name                 ir al estado 32
    expression           ir al estado 33
    boolean_expr         ir al estado 34
    or_expr              ir al estado 35
    and_expr             ir al estado 36
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 56

   22 conditional: if_expr OPEN_CLAUD . programa CLOSE_CLAUD else start_else OPEN_CLAUD programa CLOSE_CLAUD

    ID              desplazar e ir al estado 10
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18
    FOR             desplazar e ir al estado 19
    WHILE           desplazar e ir al estado 20
    IF              desplazar e ir al estado 21

    programa             ir al estado 88
    ordre                ir al estado 23
    function_call        ir al estado 24
    if_expr              ir al estado 25
    conditional          ir al estado 26
    while                ir al estado 27
    while_expr           ir al estado 28
    for_expr             ir al estado 29
    loop                 ir al estado 30
    assign               ir al estado 31
    name                 ir al estado 32
    expression           ir al estado 33
    boolean_expr         ir al estado 34
    or_expr              ir al estado 35
    and_expr             ir al estado 36
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 57

   21 conditional: if_expr programa . FI

    FI  desplazar e ir al estado 89


State 58

   24 while_expr: while OPEN_PARENTH . boolean_expr CLOSE_PARENTH

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18

    name                 ir al estado 46
    expression           ir al estado 33
    boolean_expr         ir al estado 90
    or_expr              ir al estado 35
    and_expr             ir al estado 36
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 59

   27 do: OPEN_CLAUD .

    $default  reduce usando la regla 27 (do)


State 60

   28 loop: while_expr do . programa done

    ID              desplazar e ir al estado 10
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18
    FOR             desplazar e ir al estado 19
    WHILE           desplazar e ir al estado 20
    IF              desplazar e ir al estado 21

    programa             ir al estado 91
    ordre                ir al estado 23
    function_call        ir al estado 24
    if_expr              ir al estado 25
    conditional          ir al estado 26
    while                ir al estado 27
    while_expr           ir al estado 28
    for_expr             ir al estado 29
    loop                 ir al estado 30
    assign               ir al estado 31
    name                 ir al estado 32
    expression           ir al estado 33
    boolean_expr         ir al estado 34
    or_expr              ir al estado 35
    and_expr             ir al estado 36
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 61

   29 loop: for_expr do . programa done

    ID              desplazar e ir al estado 10
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18
    FOR             desplazar e ir al estado 19
    WHILE           desplazar e ir al estado 20
    IF              desplazar e ir al estado 21

    programa             ir al estado 92
    ordre                ir al estado 23
    function_call        ir al estado 24
    if_expr              ir al estado 25
    conditional          ir al estado 26
    while                ir al estado 27
    while_expr           ir al estado 28
    for_expr             ir al estado 29
    loop                 ir al estado 30
    assign               ir al estado 31
    name                 ir al estado 32
    expression           ir al estado 33
    boolean_expr         ir al estado 34
    or_expr              ir al estado 35
    and_expr             ir al estado 36
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 62

   30 assign: name ASSIGN . boolean_expr
   33 error_assign: ASSIGN . long_error

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18
    ERROR           desplazar e ir al estado 63

    name                 ir al estado 46
    expression           ir al estado 33
    boolean_expr         ir al estado 93
    or_expr              ir al estado 35
    and_expr             ir al estado 36
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43
    long_error           ir al estado 94


State 63

   70 long_error: ERROR . long_error
   71           | ERROR .

    ERROR  desplazar e ir al estado 63

    $default  reduce usando la regla 71 (long_error)

    long_error  ir al estado 95


State 64

   31 assign: name error_assign . boolean_expr

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18

    name                 ir al estado 46
    expression           ir al estado 33
    boolean_expr         ir al estado 96
    or_expr              ir al estado 35
    and_expr             ir al estado 36
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 65

   32 error_assign: long_error . ASSIGN
   34             | long_error . ASSIGN long_error

    ASSIGN  desplazar e ir al estado 97


State 66

   40 or: OR .

    $default  reduce usando la regla 40 (or)


State 67

   41 or_expr: or_expr or . and_expr

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18

    name                 ir al estado 46
    expression           ir al estado 33
    and_expr             ir al estado 98
    not_expr             ir al estado 37
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 68

   43 and: AND .

    $default  reduce usando la regla 43 (and)


State 69

   44 and_expr: and_expr and . not_expr

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    LITERAL_BOOL    desplazar e ir al estado 14
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17
    NOT             desplazar e ir al estado 18

    name                 ir al estado 46
    expression           ir al estado 33
    not_expr             ir al estado 99
    arithm_expr          ir al estado 38
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    boolean              ir al estado 42
    generic_expression   ir al estado 43


State 70

   60 boolean: arithm_expr GT . arithm_expr

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17

    name                 ir al estado 46
    expression           ir al estado 33
    arithm_expr          ir al estado 100
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    generic_expression   ir al estado 43


State 71

   61 boolean: arithm_expr GE . arithm_expr

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17

    name                 ir al estado 46
    expression           ir al estado 33
    arithm_expr          ir al estado 101
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    generic_expression   ir al estado 43


State 72

   62 boolean: arithm_expr LT . arithm_expr

    ID              desplazar e ir al estado 45
    LITERAL_INT     desplazar e ir al estado 11
    LITERAL_FLOAT   desplazar e ir al estado 12
    LITERAL_STRING  desplazar e ir al estado 13
    ADD             desplazar e ir al estado 15
    SUB             desplazar e ir al estado 16
    OPEN_PARENTH    desplazar e ir al estado 17

    name                 ir al estado 46
    expression           ir al estado 33
    arithm_expr          ir al estado 102
    addition_expr        ir al estado 39
    multiplication_expr  ir al estado 40
    error_expression     ir al estado 41
    generic_expression   ir al estado 43


State 73

   63 boolean: arithm_expr LE . arithm_expr
